--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="plus_example_deep_link_url">https://developers.google.com/+/mobile/android/</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="yes">YES</string>
+    <string name="resend_otp"><u>Resend OTP to mobile</u></string>
 
 
     <!-- <string name="facebook_app_id">1437325266589625</string>-->
