--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="plus_example_deep_link_url">https://developers.google.com/+/mobile/android/</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="yes">YES</string>
+    <string name="resend_email">Resend Email</string>
     <string name="resend_otp"><u>Resend OTP to mobile</u></string>
     <string name="sign_up"><u>SIGN UP</u></string>
 
