--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -366,4 +366,5 @@
     <string name="select_video_fail">Select a video (failure demo)</string>
     <string name="camera_pick">Take Picture From Camera</string>
 
+    <string name="login"><u>Login</u></string>
 </resources>
