--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -301,7 +301,7 @@
     <string name="home_goto_todo">GO TO TO-DO LISTS</string>
     <string name="home_goto_event">GO TO UPCOMING EVENTS</string>
     <string name="home_goto_blog">GO TO ALL TRENDING BLOGS</string>
-    <string name="home_events">Events Today</string>
+    <string name="home_events">UPCOMING EVENTS</string>
     <string name="empty_directory">Empty Directory</string>
     <string name="storage_removed">Storage was removed or unmounted.</string>
     <string name="choose_file">Select a file</string>
