GTM Tags + Notification changes for Videos and Hindi Category

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -189,7 +189,7 @@
 ]]>
 </string>
 
-    <string name="rate_description">If you enjoy using the mycity4kids Family Organizer, please take a moment to rate it. Thank you for your support !!!</string>
+    <string name="rate_description">If you enjoy using the mycity4kids Parenting app, please take a moment to rate it. Thank you for your support !!!</string>
     <string name="update_title">Upgrade ?</string>
     <string name="install_now">INSTALL NOW</string>
     <string name="rate_now">RATE NOW</string>
