Bangla, Marathi language, Subscription Settings, open settings from notification, bug fixes

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -380,6 +380,8 @@
     <string name="home.sections.title.upcoming_events">UPCOMING EVENTS</string>
     <string name="home.sections.title.funny_videos">FUNNY VIDEOS</string>
     <string name="home.sections.title.hindi">हिन्दी</string>
+    <string name="home.sections.title.bangla">বাংলা</string>
+    <string name="home.sections.title.marathi">मराठी</string>
     <string name="analytics.pageviews.daycount">Last 30 days</string>
 
     <string name="activity.analytics.toolbar_title">Blog Analytics</string>
@@ -438,6 +440,8 @@
     <string name="editor.spell_check.title">Spell Check</string>
     <string name="editor.spell_check.message">Always check spellings before publishing</string>
     <string name="menu.hindi">हिन्दी</string>
+    <string name="menu.bangla">বাংলা</string>
+    <string name="menu.marathi">मराठी</string>
 
 
     <string name="permission_title_rationale">Permission needed</string>
