--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -798,7 +798,7 @@
     <string name="video_progress.progress_lost_msg">Your upload progress will be lost. Are you sure you want to exit?</string>
 
     <string name="user_activities.toolbar.title">ACTIVITY</string>
-    <string name="user_activities.tabs.recommended">RECOMMENDED</string>
+    <string name="user_activities.tabs.recommended">LIKED</string>
     <string name="user_activities.tabs.bookmark">BOOKMARKS</string>
     <string name="user_activities.tabs.watch_later">WATCH LATER</string>
     <string name="user_activities.tabs.comment">COMMENTS</string>
@@ -822,6 +822,7 @@
     <string name="all_videos.funny_videos.no_videos">No funny videos added.</string>
 
     <string name="notification.read_all">Read All</string>
+    <string name="notification.no_notification">No notifications</string>
 
     <string name="user_funny_video.toolbar.title">FUNNY VIDEOS</string>
     <string name="user_funny_video.published_on">Published on: %1$s</string>
