FB SDK update + Rate Us pop up changes + bug fixes

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -29,6 +29,7 @@
     <!--but now we are using client APP ID -->
     <string name="facebook_app_id">206155642763202</string>
     <string name="debug_facebook_app_id">216826955045896</string>
+    <string name="fb_login_protocol_scheme">fb206155642763202</string>
 
     <string name="write_review_prompt">What would you like to review?</string>
 
@@ -91,7 +92,6 @@
     <string name="no_query">Please enter a search query.</string>
     <string name="feedback_txt">Send Feedback</string>
     <string name="invite_txt">Invite Friends</string>
-    <string name="rate_txt">Rate the App</string>
 
     <!-- Filter/sort Screen -->
     <string name="apply">APPLY</string>
@@ -189,7 +189,6 @@
 ]]>
 </string>
 
-    <string name="rate_description">If you enjoy using the mycity4kids Parenting app, please take a moment to rate it. Thank you for your support !!!</string>
     <string name="update_title">Upgrade ?</string>
     <string name="install_now">INSTALL NOW</string>
     <string name="rate_now">RATE NOW</string>
@@ -864,4 +863,10 @@
     <string name="sort.popular">POPULAR</string>
 
     <string name="city_picker.toolbar.title">Choose City</string>
+
+    <string name="rate_us.dialog.title">RATE OUR APP?</string>
+    <string name="rate_us.dialog.not_now">NOT NOW</string>
+    <string name="rate_us.dialog.rate_now">RATE NOW</string>
+    <string name="rate_us.dialog.message1">If you enjoy using the mycity4kids Parenting app, please take a moment to rate it.</string>
+    <string name="rate_us.dialog.message2">Thank you for your support !!!</string>
 </resources>
